# Energy-sys

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  STATUS.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
configs/data/: tiny_shakespeare.yaml  toy_synthetic.yaml
configs/model/: base.yaml  mps.yaml  small_cpu.yaml
configs/train/: base.yaml  debug.yaml
docs/: AGENTS.md  CDE_NOTES.md  CPU_TIPS.md  EVALS.md  MATH_DETAILS.md  MEMORY_SYSTEM.md  OVERVIEW.md  SOLVER_NOTES.md  TECHNICAL_DESIGN.md
examples/: 01_quickstart_cpu.md  02_long_context_tips.md
scripts/: download_tiny.sh  eval_small.sh  profile_cpu.sh  setup_env.sh  train_small_cpu.sh
uelm/: __init__.py
uelm/core/: cde.py  energy.py  hopfield.py  implicit.py  masks.py  ops.py  utils.py
uelm/core/solver/: anderson.py  broyden.py  line_search.py
uelm/data/: batching.py  datasets.py  tokenization.py
uelm/models/: embeddings.py  lm_head.py  uelm.py
uelm/tests/: test_causality.py  test_energy.py  test_memory.py  test_solver.py  test_training_step.py
uelm/train/: eval_perplexity.py  infer.py  profile.py  train_lm.py
