[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "uelm"
version = "0.0.1"
description = "Unified Equilibrium Language Model"
authors = [{name = "UELM Contributors"}]
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1.0",
  "numpy",
  "einops",
  "tokenizers",
  "tqdm",
  "hydra-core",
  "matplotlib"
]

[project.optional-dependencies]
annoy = ["annoy"]
hnsw = ["hnswlib"]

[tool.setuptools.packages.find]
where = ["."]
include = ["uelm*"]
